--- a/index.css
+++ b/index.css
@@ -7,3 +7,57 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+body{
+    background:#F9FAFB;
+    position: relative;
+    height: 100vh;
+}
+
+.container{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #FEFEFE;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+form{
+    width: 400px;
+    padding: 30px 40px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 9px #888;
+}
+
+form h2{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+form .form-control{
+    padding: 10px 0px;
+}
+
+form .form-control label{
+    display: block;
+    margin-bottom: 5px;
+    color: #8D8D8D;
+}
+
+form .form-control input{
+    padding: 10px;
+    border: 2px solid #F0F0F0;
+    width: 100%;
+    border: none;
+}
+
+form button{
+    width: 100%;
+    padding: 10px;
+    background: #3498DB;
+    border-radius: 5px;
+    border: none;
+    color: #fff;
+    margin-top: 20px;
+}
